# sfml-demo

./: CMakeLists.txt  README.md
include/: constants.h  food.h  snake.h  sneak.h
src/: food.cpp  main.cpp  snake.cpp  sneak.cpp
